# dsa-cli

./: .dockerignore  Cargo.toml  Dockerfile  Readme.md  build.rs  docker-compose.yaml  git_sha
.github/workflows/: cargo-fmt.yml  docker-publish.yml
doc/: example_character.tdc  minimal_character.tdc
src/: character.rs  character_manager.rs  cli.rs  config.rs  discord.rs  discord_commands.rs  dsa.rs  greet.rs  main.rs  print.rs  util.rs
src/default_config/: config.json  dsa_data.json
