[package]
name = "dsa-cli"
version = "0.1.0"
authors = ["Daniel Ebert <daniel.ebert@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
