[package]
name = "dsa-cli"
version = "0.1.0"
authors = ["Daniel Ebert <daniel.ebert@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.4.0"
async-std = "1.9.0"
futures = "0.3.14"
enum-display-derive = "0.1.1"

[dependencies.serenity]
version = "0.10.5"
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = false
features = ["rustls_backend", "builder", "cache", "client", "model", "gateway", "http", "unstable_discord_api"]